--- a/实战案例2/整合进案例1之前/2024-07-22.CNET每日简报.html
+++ b/实战案例2/整合进案例1之前/2024-07-22.CNET每日简报.html
@@ -1,21 +1,37 @@
 <html>
-    <head><title>CNET每日简报</title></head>
+    <head>
+        <title>CNET每日简报</title>
+        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <link
+      href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-icons/1.11.0/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.2/js/bootstrap.bundle.min.js"></script>
+    </head>
 <body>
     <h1>CNET每日简报-2024-07-22</h1>
-    <ul>
-        <li>
-            <a href="https://www.cnet.com/tech/computing/how-to-fix-your-windows-pc-impacted-by-the-crowdstrike-outage-blue-screen-of-death/" target="_blank">如何修复受CrowdStrike服务中断蓝屏死机影响的Windows PC
-            </a>
-            <p>由CrowStrike软件更新引起的微软服务中断导致全球范围内的航空公司、金融、医疗保健和能源公司受到广泛影响，Windows电脑出现“蓝屏死机”错误。CrowStrike公司对这一问题负责，并发布了修复程序和解决该问题的指导。微软也为受影响的Windows电脑提供了恢复工具。用户被建议多次重启计算机或在安全模式下删除损坏的文件以解决问题。该故障不影响Mac和Linux电脑。
-            </p>
-        </li>
-        <li>
-            <a href="https://www.cnet.com/deals/act-fast-to-upgrade-to-microsofts-visual-studio-professional-for-only-35-at-stack-social/#ftag=CAD590a51e" target="_blank">迅速行动，在Stack Social上仅以35美元升级至Microsoft的Visual Studio专业版
-            </a>
-            <p>
-                微软的Visual Studio专业版是极佳的开发环境选择，目前StackSocial上有优惠活动，原价499美元的软件现只需35美元，节省了92%。这个限时优惠仅剩几小时，感兴趣的话需要迅速行动。Visual Studio Pro支持跨语言和平台开发，具有IntelliCode和CodeLens等高级功能，能提高编码速度和准确性，并支持实时协作。但需要注意的是，这次优惠的许可证只能在一台设备上使用，不支持多设备安装或转移，且不包括Azure访问和信用额度。购买后可享受更新服务，购买前请确认系统兼容性。
-            </p>
-        </li>
-    </ul>
+    <div class="container" id="main_div">
+        <div class="row">
+            <div class="accordion" id="accordionExample">
+                <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                    <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <p><h3>如何修复受CrowdStrike服务中断蓝屏死机影响的Windows PC</h3></p>
+                    <p>由CrowStrike软件更新引起的微软服务中断导致全球范围内的航空公司、金融、医疗保健和能源公司受到广泛影响，Windows电脑出现“蓝屏死机”错误。CrowStrike公司对这一问题负责，并发布了修复程序和解决该问题的指导。微软也为受影响的Windows电脑提供了恢复工具。用户被建议多次重启计算机或在安全模式下删除损坏的文件以解决问题。该故障不影响Mac和Linux电脑。
+                    </p>
+                    </button>
+                    </h2>
+                </div>
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
+                    <p><a href="https://www.cnet.com/deals/act-fast-to-upgrade-to-microsofts-visual-studio-professional-for-only-35-at-stack-social/#ftag=CAD590a51e" target="_blank">阅读原文</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
